force-app/main/default/objects/Quantitiy_Tier__c/Quantitiy_Tier__c.object-meta.xml
<CustomObject>
    <label>Quantitiy Tier</label>
    <nameField>
        <label>Quantitiy Tier Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quantitiy Tiers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>