force-app/main/default/objects/Quantitiy_Tier__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Category</label>
    <referenceTo>Category__c</referenceTo>
    <relationshipLabel>Quantitiy Tiers</relationshipLabel>
    <relationshipName>Quantitiy_Tiers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>