force-app/main/default/objects/Quantitiy_Tier__c/fields/Maximum_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Quantity__c</fullName>
    <defaultValue>99999</defaultValue>
    <label>Maximum Quantity</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>