force-app/main/default/objects/Quantitiy_Tier__c/fields/Minimum_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Quantity__c</fullName>
    <label>Minimum Quantity</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>